--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -46,7 +46,7 @@
                         <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:"USD":"symbol":"1.2-2"}}</td>
-                        <td><pm-start></pm-start></td>
+                        <td><pm-start [rating]="product.starRating"></pm-start></td>
                     </tr>
                 </tbody>
             </table>
