Create the body of the product details card

--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -2,6 +2,45 @@
     <div class="card-header">
         {{pageTitle + ": " + product?.productName}}
     </div>
+    <div class="card-body" *ngIf="product">
+        <div class="row align-items-left">
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-4">Name:</div>
+                    <div class="col-md-8">{{product.productName}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">Code:</div>
+                    <div class="col-md-8">{{product.productCode | lowercase | convertToSpaces: "-"}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">Descritpion:</div>
+                    <div class="col-md-8">{{product.description}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">Avalability:</div>
+                    <div class="col-md-8">{{product.releaseDate}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">Price:</div>
+                    <div class="col-md-8">{{product.price | currency: "USD": "symbol"}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">5 star rating</div>
+                    <div class="col-md-8">
+                        <pm-start [rating]="product.starRating"></pm-start>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-md-4">
+                <img [src]="product.imageUrl"
+                     [title]="product.productName"
+                     [style.width.px]="imageWidth"
+                     [style.margin.px]="imageMargin">
+            </div>
+        </div>
+    </div>
     <div class="card-footer">
         <button class="btn btn-outline-secondary"
                 style="width: 80px ;"
